// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead one and four 1`] = `
Array [
  <style>
.S1 {
  border-bottom-width: 0px;
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}
</style>

<div
    className="S1"
  >
    lead
  </div>,
  <style>
.S1 {
  border-bottom-width: 0px;
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}

.S2 {
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}
</style>

<div
    className="S1"
  >
    <div
      className="S1"
    >
      support-1
    </div>
    <div
      className="S2"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomWidth": "1px",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "marginLeft": "10px",
          "marginRight": "10px",
        }
      }
    />
    <div
      className="S1"
    >
      support-2
    </div>
    <div
      className="S2"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomWidth": "1px",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "marginLeft": "10px",
          "marginRight": "10px",
        }
      }
    />
    <div
      className="S1"
    >
      support-3
    </div>
    <div
      className="S2"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomWidth": "1px",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "marginLeft": "10px",
          "marginRight": "10px",
        }
      }
    />
    <div
      className="S1"
    >
      support-4
    </div>
  </div>,
]
`;

exports[`2. tablet - lead one and four 1`] = `
<style>
.S1 {
  border-bottom-width: 0px;
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}

.S2 {
  border-bottom-width: 0px;
}

.S3 {
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
}

.S4 {
  border-bottom-width: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}
</style>

<div
  className="S4"
  style={
    Object {
      "WebkitBoxDirection": "normal",
      "WebkitBoxFlex": 1,
      "WebkitBoxOrient": "horizontal",
      "WebkitFlexBasis": "0%",
      "WebkitFlexDirection": "row",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexDirection": "row",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexDirection": "row",
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
      "paddingLeft": "10px",
      "paddingRight": "10px",
    }
  }
>
  <div
    className="S2"
    style={
      Object {
        "paddingBottom": "10px",
        "paddingLeft": "10px",
        "paddingRight": "10px",
        "paddingTop": "10px",
        "width": "50%",
      }
    }
  >
    <div
      className="S1"
    >
      lead
    </div>
  </div>
  <div
    className="S1"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  />
  <div
    className="S1"
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <div
      className="S1"
    >
      support-1
    </div>
    <div
      className="S3"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomWidth": "1px",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "marginLeft": "10px",
          "marginRight": "10px",
        }
      }
    />
    <div
      className="S1"
    >
      support-2
    </div>
    <div
      className="S3"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomWidth": "1px",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "marginLeft": "10px",
          "marginRight": "10px",
        }
      }
    />
    <div
      className="S1"
    >
      support-3
    </div>
    <div
      className="S3"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomWidth": "1px",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "marginLeft": "10px",
          "marginRight": "10px",
        }
      }
    />
    <div
      className="S1"
    >
      support-4
    </div>
  </div>
</div>
`;
